# MLflow-with-Bappy

./: .gitignore  Dockerfile  MLflow_01.py  README.md  app.py  docker-compose.yaml  experiments.py  pyproject.toml  requirements.txt  start.sh
codebasics_mlflow/: experiments.ipynb
mlartifacts/520149678356768865/19fda495b15547b191ed2e83cd4d5da2/artifacts/Logistic Regression/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
mlruns/0/: meta.yaml
