[tool.poetry]
name = "mlflow-01"
version = "0.0.1"
description = "MLflow Learning"
authors = ["Hamza Ali"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
mlflow = "^2.14.2"
scikit-learn = "^1.5.1"
logging = "^0.4.9.6"
tensorflow = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
